--- a/assets/index.html
+++ b/assets/index.html
@@ -20,7 +20,7 @@
                 <img src="./img/action2.jpg" alt="" />
                 <div class="text">
                     <p>☀️Друзья, а у нас фестиваль на день города Йошкар-Олы с 5 по 11 августа! Мы будем летать над городом и рядом, постараемся сделать несколько общих стартов с городских площадок.</p>
-                    <p>✈️Чтобы совершить с нами полет на фестивале, нужен бронзовый сертификат для полёта в группе, который подорожает 1 августа до 8000р</p>
+                    <p>✈️Чтобы совершить с нами полет на фестивале, нужен бронзовый сертификат для полёта в группе.</p>
                     <button class="bronz">КУПИТЬ Бронозвый сертификат</button>
                     <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>
                 </div>
@@ -210,7 +210,7 @@
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
                     <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
 <!--                    для детей 7-14 лет – 3500 р., для взрослых-->
-                    <p class="not-top">Стоимость  – 7000 р. Подорожает с 1 августа до 8000 р.</p>
+                    <p class="not-top">Стоимость  – 8000 р.</p>
                     <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
                     <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
