--- a/assets/index.html
+++ b/assets/index.html
@@ -322,10 +322,11 @@
         </center>
     </div>
 <!--    <link rel="stylesheet" href="scss/css/lightbox.min.css">-->
-<!--    <script src="dist/js/lightbox.min.js"></script>-->
+<!--    <script src="js/lightbox.min.js"></script>-->
 <!--    <script src="dist/js.js"></script>-->
     <!-- created by vk.com/id17493517 -->
-    <script src="./index.js"></script>
+<!--    <script src="./index.js"></script>-->
+
 </body>
 
 </html>
