--- a/assets/index.html
+++ b/assets/index.html
@@ -8,25 +8,32 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet"> -->
 <!--    <link href="scss/main.scss" rel="stylesheet">-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script src="https://widget.m2lab.ru/js/app.js"></script>
+    <script src="https://widget.m2lab.ru/js/chunk-vendors.js"></script>
 
     <title>Полеты на воздушном шаре - стоимость, фото | Легкие люди</title>
 </head>
 <body>
-    <div class="faded">
-    </div>
+<!--    <div class="faded">-->
+<!--    </div>-->
 <!--        криво назвал чтоб не лочили браузеры-->
-        <div class="baraner">
-            <div class="wrap">
-                <img src="./img/action2.jpg" alt="" />
-                <div class="text">
-                    <p>☀️Друзья, а у нас фестиваль на день города Йошкар-Олы с 5 по 11 августа! Мы будем летать над городом и рядом, постараемся сделать несколько общих стартов с городских площадок.</p>
-                    <p>✈️Чтобы совершить с нами полет на фестивале, нужен бронзовый сертификат для полёта в группе.</p>
-                    <button class="bronz">КУПИТЬ Бронозвый сертификат</button>
-                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>
-                </div>
-                <div class="close"></div>
-            </div>
-        </div>
+<!--        <div class="baraner">-->
+<!--            <div class="wrap">-->
+<!--                <img src="./img/action2.jpg" alt="" />-->
+<!--                <div class="text">-->
+<!--                    Друзья, в Новом году у нас новые цены:-->
+
+
+<!--                 -->
+
+<!--                    <p>Приобретённые сертификаты - наши обещания совершить с вами полет, они гарантировано действительны в течение одного года. Спасибо, что поддерживаете нас!</p>-->
+
+<!--                    <button class="bronz">КУПИТЬ Бронозвый сертификат</button>-->
+<!--                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>-->
+<!--                </div>-->
+<!--                <div class="close"></div>-->
+<!--            </div>-->
+<!--        </div>-->
 
     
     <div class="app">
@@ -67,7 +74,22 @@
         <div class="balon"></div>
         <div class="logo"></div>
     </section>
+
     <section class="second">
+        <div class="how copied">
+            <div class="back">
+                <div class="text-block">
+                    <h2 id="howfly2">В новом году у нас новые цены:</h2>
+                    <p> 🔅Участие одного человека в групповом полёте, бронзовый сертификат стоит 10000р;</p>
+                    <p> 🔅Индивидуальный полёт для двоих, серебряный сертификат стоит 35000р</p>
+                    <p>🔅Индивидуальный полёт для четверых, платиновый сертификат стоит 45000р.</p>
+                    <p>Мы не занимаемся коммерческими перевозками, все полеты демонстрационные, рекламные или иные, не связанные с коммерческими перевозками. Маршруты нельзя выбрать, они пролегают исключительно по направлению ветра в согласованных для полёта районах, трансфер туда и обратно мы обеспечиваем.
+                    </p>
+                    <p>Приобретённые сертификаты - наши обещания совершить с вами полет, они гарантировано действительны в течение одного года. Спасибо, что поддерживаете нас!</p>
+                </div>
+            </div>
+        </div>
+
         <div class="why">
             <div class="back">
                 <div class="text-block">
@@ -210,23 +232,15 @@
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
                     <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
 <!--                    для детей 7-14 лет – 3500 р., для взрослых-->
-                    <p class="not-top">Стоимость  – 8000 р.</p>
+                    <p class="not-top">Стоимость  – 10 000р.</p>
                     <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
-                    <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
-                    <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>                    <p>Золотой – часовой полет для троих людей. Отличный вариант для семейных полетов.</p>
-                    <p class="not-top">Стоимость –  29 000 р. (аренда всей корзины на час)</p>
-                    <button class="gold">КУПИТЬ ЗОЛОТОЙ СЕРТИФИКАТ</button>
+                    <p class="not-top">Стоимость – 35 000р. (за двоих)</p>
+                    <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>
                     <p>Платиновый – часовой полет для четверых людей. Отличный вариант для семейных полетов тоже:)</p>
-                    <p class="not-top">Стоимость – 32 000 р. (аренда всей корзины на час)</p>
+                    <p class="not-top">Стоимость – 45 000р. (аренда всей корзины на час)</p>
                     <button class="platina">КУПИТЬ ПЛАТИНОВЫЙ СЕРТИФИКАТ</button>
-                    <p>Бриллиантовый – часовой полет для шестерых людей.</p>
-                    <p class="not-top">Стоимость – 60 000 р. (аренда всей корзины на час)</p>
-                    <button class="diamond">КУПИТЬ БРИЛИАНТОВЫЙ СЕРТИФИКАТ</button>
-                    <p>Корпоративный – часовой полет на 12 человек.</p>
-                    <p class="not-top">Стоимость – 72 000 р. (аренда всей корзины на час)</p>
-                    <button class="corporat">КУПИТЬ КОРПОРАТИВНЫЙ СЕРТИФИКАТ</button>
-                    <p><span class="warning">Важно!</span> Приобретая серебряный или золотой сертификат, вы подтвержтаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
+                    <p><span class="warning">Важно!</span> Приобретая сертификат, вы подтверждаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
                     <p><b>Дарите эмоции – это бесценно!</b></p>
                 </div>
             </div>
@@ -253,67 +267,25 @@
     </div>
     <div class="hidden">
         <center>
-            <form name="39692_buyNow_simple_button" id="39692_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
+            <form name="60464_buyNow_simple_button" id="60464_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
                 <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="39692" />
+                    <input type="hidden" name="MNT_ITEM_ID" value="60464" />
                     <input type="hidden" name="MNT_QUANTITY" value="1" />
                     <input type="submit" value="Купить" />
                     <!-- дополнительные параметры -->
                 </fieldset>
             </form>
-            <form name="33947_buyNow_simple_button" id="33947_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
+            <form name="60464_buyNow_simple_button" id="60465_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
                 <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="33947">
-                    <input type="hidden" name="MNT_QUANTITY" value="1">
-                    <input type="submit" value="Серебряный сертификат">
+                    <input type="hidden" name="MNT_ITEM_ID" value="60465" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="Купить" />
                     <!-- дополнительные параметры -->
                 </fieldset>
             </form>
-
-            <form name="33946_buyNow_simple_button" id="33946_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
+            <form name="60466_buyNow_simple_button" id="60466_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
                 <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="33946">
-                    <input type="hidden" name="MNT_QUANTITY" value="1">
-                    <input type="submit" value="Золотой сертификат">
-                    <!-- дополнительные параметры -->
-                </fieldset>
-            </form>
-
-            <form name="33948_buyNow_simple_button" id="33948_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
-                <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="33948" />
-                    <input type="hidden" name="MNT_QUANTITY" value="1" />
-                    <input type="submit" value="ЭКСТРИМ" />
-                    <!-- дополнительные параметры -->
-                </fieldset>
-            </form>
-            <form name="39516_buyNow_simple_button" id="39516_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
-                <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="39516" />
-                    <input type="hidden" name="MNT_QUANTITY" value="1" />
-                    <input type="submit" value="Купить" />
-
-                </fieldset>
-            </form>
-            <form name="48235_buyNow_simple_button" id="48235_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
-                <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="48235" />
-                    <input type="hidden" name="MNT_QUANTITY" value="1" />
-                    <input type="submit" value="Купить" />
-                    <!— дополнительные параметры —>
-                </fieldset>
-            </form>
-            <form name="48234_buyNow_simple_button" id="48234_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
-                <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="48234" />
-                    <input type="hidden" name="MNT_QUANTITY" value="1" />
-                    <input type="submit" value="Купить" />
-                    <!— дополнительные параметры —>
-                </fieldset>
-            </form>
-            <form name="48507_buyNow_simple_button" id="48507_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
-                <fieldset>
-                    <input type="hidden" name="MNT_ITEM_ID" value="48507" />
+                    <input type="hidden" name="MNT_ITEM_ID" value="60466" />
                     <input type="hidden" name="MNT_QUANTITY" value="1" />
                     <input type="submit" value="Купить" />
                     <!-- дополнительные параметры -->
