add button add tg icon remove inn ogrn

--- a/assets/index.html
+++ b/assets/index.html
@@ -86,6 +86,8 @@
                     <p>Мы не занимаемся коммерческими перевозками, все полеты демонстрационные, рекламные или иные, не связанные с коммерческими перевозками. Маршруты нельзя выбрать, они пролегают исключительно по направлению ветра в согласованных для полёта районах, трансфер туда и обратно мы обеспечиваем.
                     </p>
                     <p>Приобретённые сертификаты - наши обещания совершить с вами полет, они гарантировано действительны в течение одного года. Спасибо, что поддерживаете нас!</p>
+
+                    <a href="#howmatch" class="kostil-open-panel"><button class="">КУПИТЬ СЕРТИФИКАТ</button></a>
                 </div>
             </div>
         </div>
@@ -255,13 +257,15 @@
             <p>Небо ждет Вас! Затаите дыхание...</p>
             <ul>
                 <li class='vk'><a href="http://vk.com/legkie_lyudi" target="_blanck">        vk.com/legkie_lyudi</a></li>
+                <li class='tg'><a href="https://t.me/ll12ru" target="_blanck">      t.me/ll12ru</a></li>
                 <li class='phone'><a href="tel:+88362330444"> 📱8(8362) 330 - 444 Йошкар-Ола</a></li>
                 <li class='phone'><a href="tel:+79221423722"> 📱+7(922) 142 37 - 22 Казань</a></li>
 <!--                    📱+79379300215 Чебоксары-->
                 <li class='mail'><a href="">    midobriy@gmail.com</a></li>
 <!--                <li class='insta'><a href="http://instagram.com/ll12ru/" target="_blanck">  @ll12ru</a></li>-->
             </ul>
-            <div class="copirate">ООО "Клуб воздухоплавателей "Легкие люди" / ОГРН 1141215009286 / ИНН 1215185402 / КПП 121501001 / г. Йошкар-Ола, переулок Ладыгина д.6 / Тел.: +7 (922) 142 37 22 </div>
+            <div class="copirate"> </div>
+<!--            <div class="copirate">ООО "Клуб воздухоплавателей "Легкие люди" / ОГРН 1141215009286 / ИНН 1215185402 / КПП 121501001 / г. Йошкар-Ола, переулок Ладыгина д.6 / Тел.: +7 (922) 142 37 22 </div>-->
         </div>
     </footer>
     </div>
