--- a/assets/index.html
+++ b/assets/index.html
@@ -227,20 +227,20 @@
         <div class="how-match">
             <div class="back">
                 <div class="text-block">
-                    <h2 id="howmatch">стоимость полета на воздушном шаре</h2>
-                    <p><b>Для того чтобы совершить полет, нужно приобрести сертификат на полет. Выберите один из трех номиналов сертификата, который подходит именно вам:</b></p>
+                    <h2 id="howmatch">Стоимость сертификатов</h2>
+                    <p><b>Покупая сертификат вы помогаете нам развивать воздухоплавание, инвестируя в наш клуб, а мы в знак благодарности готовы совершить с вами полёт совершенно бесплатно.</b></p>
 <!--                    <p>Экстрим – часовой индивидуальный полет для одного человека на спортивном аэростате.</p>-->
 <!--                    <p class="not-top">Стоимость – 17 000 р.</p>-->
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
-                    <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
+                    <p>«Бронзовый сертификат - 10000р, если вы один и любите компанию и новые знакомства»</p>
 <!--                    для детей 7-14 лет – 3500 р., для взрослых-->
-                    <p class="not-top">Стоимость  – 10 000р.</p>
+<!--                    <p class="not-top">Стоимость  – 10 000р.</p>-->
                     <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
-                    <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
-                    <p class="not-top">Стоимость – 35 000р. (за двоих)</p>
+                    <p>Серебряный сертификат - 35000р, если вас двое и вы романтики</p>
+<!--                    <p class="not-top">Стоимость – 35 000р. (за двоих)</p>-->
                     <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>
-                    <p>Платиновый – часовой полет для четверых людей. Отличный вариант для семейных полетов тоже:)</p>
-                    <p class="not-top">Стоимость – 45 000р. (аренда всей корзины на час)</p>
+                    <p>Платиновый сертификат - 45000р, если вас четверо и вам больше никто не нужен</p>
+<!--                    <p class="not-top">Стоимость – 45 000р. (аренда всей корзины на час)</p>-->
                     <button class="platina">КУПИТЬ ПЛАТИНОВЫЙ СЕРТИФИКАТ</button>
                     <p><span class="warning">Важно!</span> Приобретая сертификат, вы подтверждаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
                     <p><b>Дарите эмоции – это бесценно!</b></p>
