--- a/assets/index.html
+++ b/assets/index.html
@@ -80,9 +80,9 @@
             <div class="back">
                 <div class="text-block">
                     <h2 id="howfly2">В новом году у нас новые цены:</h2>
-                    <p> 🔅Участие одного человека в групповом полёте, бронзовый сертификат стоит 10000р;</p>
-                    <p> 🔅Индивидуальный полёт для двоих, серебряный сертификат стоит 35000р</p>
-                    <p>🔅Индивидуальный полёт для четверых, платиновый сертификат стоит 45000р.</p>
+                    <p> 🔅Бронзовый сертификат стоит 10000р;</p>
+                    <p> 🔅Серебряный сертификат стоит 35000р</p>
+                    <p> 🔅Платиновый сертификат стоит 45000р.</p>
                     <p>Мы не занимаемся коммерческими перевозками, все полеты демонстрационные, рекламные или иные, не связанные с коммерческими перевозками. Маршруты нельзя выбрать, они пролегают исключительно по направлению ветра в согласованных для полёта районах, трансфер туда и обратно мы обеспечиваем.
                     </p>
                     <p>Приобретённые сертификаты - наши обещания совершить с вами полет, они гарантировано действительны в течение одного года. Спасибо, что поддерживаете нас!</p>
