--- a/assets/index.html
+++ b/assets/index.html
@@ -85,7 +85,7 @@
                     <p> 🔅Платиновый сертификат стоит 45000р.</p>
                     <p>Мы не занимаемся коммерческими перевозками, все полеты демонстрационные, рекламные или иные, не связанные с коммерческими перевозками. Маршруты нельзя выбрать, они пролегают исключительно по направлению ветра в согласованных для полёта районах, трансфер туда и обратно мы обеспечиваем.
                     </p>
-                    <p>Приобретённые сертификаты - наши обещания совершить с вами полет, они гарантировано действительны в течение одного года. Спасибо, что поддерживаете нас!</p>
+                    <p>Приобретённые сертификаты - наши обещания совершить с вами полет бесплатно, они гарантировано действительны в течение одного года. Спасибо, что поддерживаете нас!</p>
 
                     <a href="#howmatch" class="kostil-open-panel"><button class="">КУПИТЬ СЕРТИФИКАТ</button></a>
                 </div>
@@ -242,7 +242,8 @@
                     <p>Платиновый сертификат - 45000р, если вас четверо и вам больше никто не нужен</p>
 <!--                    <p class="not-top">Стоимость – 45 000р. (аренда всей корзины на час)</p>-->
                     <button class="platina">КУПИТЬ ПЛАТИНОВЫЙ СЕРТИФИКАТ</button>
-                    <p><span class="warning">Важно!</span> Приобретая сертификат, вы подтверждаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
+
+<!--                    <p><span class="warning">Важно!</span> Приобретая сертификат, вы подтверждаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>-->
                     <p><b>Дарите эмоции – это бесценно!</b></p>
                 </div>
             </div>
