--- a/assets/index.html
+++ b/assets/index.html
@@ -242,8 +242,8 @@
                     <p>Платиновый сертификат - 45000р, если вас четверо и вам больше никто не нужен</p>
 <!--                    <p class="not-top">Стоимость – 45 000р. (аренда всей корзины на час)</p>-->
                     <button class="platina">КУПИТЬ ПЛАТИНОВЫЙ СЕРТИФИКАТ</button>
-
-<!--                    <p><span class="warning">Важно!</span> Приобретая сертификат, вы подтверждаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>-->
+<!--                    <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a>-->
+                    <p><span class="warning">Важно!</span> Приобретая сертификат, вы подтверждаете, что ознакомлены и согласны с нашими условиями</p>
                     <p><b>Дарите эмоции – это бесценно!</b></p>
                 </div>
             </div>
